# forecast_benchmark

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: advanced_data_context.yaml  advanced_data_weather.yaml  ann.yaml  ann_advanced_context.yaml  ann_advanced_weather.yaml  ann_context.yaml  ann_hydro_weather.yaml  ann_weather.yaml  bilstm_context.yaml  bilstm_hydro_weather.yaml  bilstm_weather.yaml  data.yaml  flownet_context.yaml  flownet_hydro_weather.yaml  flownet_weather.yaml  hybrid_context.yaml  hybrid_hydro_weather.yaml  hybrid_weather.yaml  lstm.yaml  lstm_advanced_context.yaml  lstm_advanced_weather.yaml  lstm_context.yaml  lstm_hydro_weather.yaml  lstm_weather.yaml  mamba.yaml  mamba_advanced_context.yaml  mamba_advanced_weather.yaml  mamba_context.yaml  mamba_hydro_weather.yaml  mamba_weather.yaml  nhits.yaml  nhits_advanced_context.yaml  nhits_advanced_weather.yaml  nhits_context.yaml  nhits_hydro_weather.yaml  nhits_weather.yaml  patchtst.yaml  patchtst_advanced_context.yaml  patchtst_advanced_weather.yaml  patchtst_context.yaml  (+25 more)
docs/: advanced_benchmark.md  data_documentation.md  gpu_setup.md  model_documentation.md  model_documentation_w30.md  training_documentation.md  training_documentation_w30.md
scripts/: assemble_hydro_parquet.py  compare_advanced_results.py  compare_all_results.py  compare_model_results.py  compare_weather_ablations.py  download_hydro_enrichment.py  download_hydro_era5l_daily.py  download_hydro_era5l_hourly.py  download_reanalysis_data.py  plot_benchmark_results.py  plot_journal_figures.py  plot_neural_results.py  (+12 more)
(+44 files in other folders)
