[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forecast-benchmark"
version = "0.1.0"
description = "Daily river discharge forecasting benchmark foundation and ingestion pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10",
    "numpy>=1.26",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "PyYAML>=6.0",
    "torch>=2.10",
    "xgboost>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
